--- a/cordova-airship/package.json
+++ b/cordova-airship/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@ua/cordova-airship",
-  "version": "15.2.0",
+  "name": "ua-cordova-airship",
+  "version": "15.2.0-dev.0",
   "description": "Airship Cordova plugin",
   "cordova": {
-    "id": "@ua/cordova-airship",
+    "id": "ua-cordova-airship",
     "platforms": [
       "android",
       "ios"
